--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,8 @@
 [submodule "varia_custom_sprites"]
 	path = varia_custom_sprites
-	url = https://github.com/theonlydude/varia_custom_sprites
+	url = https://github.com/H-A-M-G-E-R/varia_custom_sprites
 	update = merge
-	branch = main
+	branch = add-my-new-songs
 [submodule "super-metroid"]
 	path = super-metroid
 	url = git@github.com:chriscauley/super-metroid.git
